--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL=postgres://localhost/practice_exp_app_development
+SESSION_SECRET=sleepy_chihuahua
 TEST_DATABASE_URL=postgres://localhost/practice_exp_app_test
