--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "db:createMigration": "node ./lib/createMigrations.js",
     "lint": "eslint --ignore-path .gitignore .",
     "start": "node ./bin/www",
-    "test": "mocha --recursive"
+    "test": "mocha --recursive --exit"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-pg-simple": "^6.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.16.2",
     "morgan": "~1.9.1",
     "pg": "^7.12.1",
     "postgrator": "^3.10.2"
