User can sign up (#1)
* WIP - user is created in db, still need to add session and validate returned user

* User log in sets a cookie

* Signup email must be unique

* Database is cleared after each test

* Really more of a feature test since it hits the db and alllll

* Added model test to ensure users with dup emails cannot be created...

Also database rejects users with dup email addresses

* Added curl deets for sign up

* Login cookie works to return users/me route...

No cookie gets 404ed, bad cookie gets 404ed

* Address linting issues

* WHAT was I thinking with snake case :snake:

* Added curl deets to curl users/me with session cookie

* Update setup with env deets, some capitalization, and added links for session packages

* Remove extra details from README

* Moved auth to a resuable lib funcion

* Blankspace correction, adjusting

* Alpha scripts in package

* Remove comment, standardize blankspace for queries

* Added link to pg docs

* Remove database url parsing and just use the connection string

--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "db:createMigration": "node ./lib/createMigrations.js",
+    "db:migrate": "node postgrator.js",
+    "db:migrate:test": "NODE_ENV=test node postgrator.js",
     "lint": "eslint --ignore-path .gitignore .",
     "start": "node ./bin/www",
-    "test": "mocha --recursive"
+    "test": "mocha --recursive --exit"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-pg-simple": "^6.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "express-session": "^1.16.2",
+    "morgan": "~1.9.1",
+    "pg": "^7.12.1",
+    "postgrator": "^3.10.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "dotenv": "^8.1.0",
     "eslint": "^6.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
