--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,20 +3,36 @@ jobs:
   build:
     docker:
       - image: circleci/node:12.10.0
-    working_directory: ~/repo
+        environment:
+          PGHOST: 127.0.0.1
+          PGUSER: user
+          NODE_ENV: test
+          TEST_DATABASE_URL: postgres://localhost/exp_starter_api_test
+      - image: circleci/postgres:10.5
+        environment:
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: ""
+          POSTGRES_DB: exp_starter_api_test
+
+    working_directory: ~/practice-exp-app
 
     steps:
       - checkout
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
       - run: yarn install
-
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      - run: yarn test && yarn lint
+      - run: dockerize -wait tcp://localhost:5432 -timeout 1m
+      - run:
+          name: Set up DB
+          command:
+            yarn db:migrate:test
+          environment:
+            TEST_DATABASE_URL: postgres://user@localhost:5432/exp_starter_api_test
+      - run: yarn lint; yarn test;
